# L0Learn

./: .Rbuildignore  .gitignore  .gitmodules  .pre-commit-config.yaml  .travis.yml  CDL0.Imp2cpp  CDL0.cpp  CDL0Old.cpp  ChageLog  ChangeLog  DESCRIPTION  LICENSE  NAMESPACE  README.md  RInterface.cpp  chagelog  config.status  configure  configure.ac  dense_test.txt
.github/workflows/: python.yml  python_CI.yml  python_docs.yml  r.yml  wheels.yml
R/: .Rbuildignore  .astylerc  CVPlot.R  CVfit.R  DESCRIPTION  Interface.R  L0Learn.R  NAMESPACE  README.md  RcppExports.R  cleanup  coef.R  configure  configure.ac  cvfit.R  cvplot.R  fit.R  genhighcorr.R  genlogistic.R  gensynthetic.R  plot.R  predict.R  print.R
R/R/: L0Learn.R  RcppExports.R  coef.R  cvfit.R  fit.R  genhighcorr.R  genlogistic.R  gensynthetic.R  plot.R  predict.R  print.R
R/man/: GenSynthetic.Rd  GenSyntheticLogistic.Rd  L0Learn-package.Rd  coef.L0Learn.Rd
R/src/: CDL012LogisticSwaps.cpp  CDL012SquaredHingeSwaps.cpp  CDL012Swaps.cpp  Grid.cpp  Grid1D.cpp  Grid2D.cpp  Makevars  Makevars.in  Makevars.win  Normalize.cpp  R_L0Learn_Interface.cpp  R_L0Learn_Interface.h  RcppExports.cpp  Test_Interface.cpp  Test_Interface.h
R/src/include/: BetaVector.h  CD.h  CDL0.h  CDL012Logistic.h  CDL012LogisticSwaps.h  CDL012SquaredHinge.hpp  CDL012Swaps.h  CDSwaps.h  Grid.h  Grid.hpp  Grid1D.h  Grid2D.h  GridParams.h  GridParams.hpp  L0Learn.hpp  L0LearnCore.h  MakeCD.h  Normalize.h  Normalize.hpp  Params.hpp  R_L0Learn_Interface.h  utils.h  utils.hpp
R/src/src/: CDL012LogisticSwaps.cpp  CDL012SquaredHingeSwaps.cpp  CDL012Swaps.cpp  Grid.cpp  Grid1D.cpp  Grid2D.cpp
R/src/src/include/: BetaVector.h  CD.h  CDL0.h  CDL012.h  CDL012Logistic.h  CDL012LogisticSwaps.h  CDL012SquaredHinge.h  CDL012SquaredHingeSwaps.h  CDL012Swaps.h  FitResult.h  Grid.h  Grid1D.h  Grid2D.h  GridParams.h  L0LearnCore.h  MakeCD.h  Normalize.h  Params.h  arma_includes.h  utils.h
R/tests/: testthat.R
R/tests/testthat/: test-L0Learn_accuracy.R  test-L0Learn_gen.R  test_L0Learn.R  test_L0Learn_bounds.R  test_L0Learn_highcorr.R  test_L0Learn_intercept.R  test_L0Learn_usergrids.R  test_L0Learn_utils.R
R/vignettes/profile/: L0Learn_Profile.R  L0Learn_Profile_Install.R  L0Learn_Profile_Run.R  L0Learn_Profile_Run.py  ProfilePlotting.ipynb
docs/: code.html  genindex.html  index.html  objects.inv  search.html  searchindex.js  tutorial.html  tutorial.ipynb
docs/html/: tutorial.html
include/: CD.h  CDL0.h  CDL012.h  CDL012Cons.h  CDL012KSwapsExh.h  CDL012Logistic.h  CDL012LogisticSwaps.h  CDL012SquaredHinge.h  CDL012SquaredHingeSwaps.h  CDL012Swaps.h  CDL1.h  CDL1Relaxed.h  FitResult.h  Grid.h  Grid1D.h  Grid2D.h  GridParams.h  IHTL0.h  Model.h  Normalize.h  Params.h
man/: GenSynthetic.Rd  GenSyntheticHighCorr.Rd  GenSyntheticLogistic.Rd  L0Learn-package.Rd  L0Learn.coef.Rd  L0Learn.cvfit.Rd  L0Learn.fit.Rd  L0Learn.predict.Rd  coef.L0Learn.Rd  coef.Rd  plot.L0Learn.Rd  plot.L0LearnCV.Rd  predict.L0Learn.Rd  predict.Rd  print.L0Learn.Rd  print.L0Learncoef.Rd  print.Rd
python/: CMakeLists.txt  LICENSE  README.md  README.rst  Untitled.ipynb  _tutorial.rst  appveyor.yml  cibuilwheel.sh  pyproject.toml  setup.cfg  setup.py  sparse.ipynb
python/_github_pages_docs/html/: .buildinfo  code.html  genindex.html  index.html  search.html
python/_github_pages_docs/html/_sources/: code.rst.txt
python/doc/: code.rst  conf.py  index.rst  tutorial.ipynb
python/l0learn/: __init__.py  cyarma.cpp  cyarma.pxd  cyarma.pyx  interface.cpp  interface.py  interface.pyx  models.py  pyl0learn.cpp  pyl0learn.h  testing_utils.cpp  testing_utils.pxd  testing_utils.pyx  utils.py  version.py
python/l0learn/src/: Grid.cpp  Normalize.cpp
python/l0learn/src/include/: BetaVector.h  CD.h  CDL0.h  CDL012.h  CDL012Logistic.h  CDL012LogisticSwaps.h  CDL012SquaredHinge.h  CDL012SquaredHingeSwaps.h  CDL012Swaps.h  FitResult.h  Grid.h  Grid1D.h  Grid2D.h  GridParams.h  L0LearnCore.h  MakeCD.h  Model.h  Normalize.h  Params.h  arma_includes.h  utils.h
python/scripts/: install_linux_libs.sh  openblas_support.py
python/src/l0learn/: cyarma.pxd  cyarma.pyx  interface.cpp  interface.pxd  interface.pyx  testing_utils.cpp  testing_utils.pxd  testing_utils.pyx
python/src/l0learn/src/: CDL012LogisticSwaps.cpp  Grid1D.cpp
python/src/l0learn/src/include/: BetaVector.h  CD.h  CDL012Logistic.h  FitResult.h  Grid.h  MakeCD.h  Normalize.h  Params.h  utils.h
python/tests/: test_cyarma.py  test_fit.py  test_models.py  test_utils.py
scripts/: dirs_check.py
src/: BetaVector.cpp  CD.cpp  CDL0.cpp  CDL012.cpp  CDL012Cons.cpp  CDL012KSwapsExh.cpp  CDL012Logistic  CDL012Logistic.cpp  CDL012LogisticSwaps.cpp  CDL012SquaredHinge.cpp  CDL012SquaredHingeSwaps.cpp  CDL012Swaps.cpp  CDL1.cpp  CDL1Relaxed.cpp  CrossValidation.cpp  Grid.cpp  Grid1D.cpp  Grid2D.cpp  IHTL0.cpp  Interface.cpp  MakeCD.cpp  Makevars  Makevars.in  Makevars.win  Normalize.cpp  RInterface.cpp  RcppExports.cpp  Test_Interface.cpp  X.csv  a.out  main  profile.cpp  utils.cpp  y.csv
src/include/: BetaVector.h  BetaVector.hpp  CD.h  CD.hpp  CDL0.h  CDL0.hpp  CDL012.h  CDL012.hpp  CDL012Logistic.h  CDL012Logistic.hpp  CDL012LogisticSwaps.h  CDL012LogisticSwaps.hpp  CDL012SquaredHinge.h  CDL012SquaredHingeSwaps.h  CDL012SquaredHingeSwaps.hpp  CDL012Swaps.h  CDL012Swaps.hpp  CDSwaps.h  CDSwaps.hpp  CrossValidation.h  FitResult.h  FitResult.hpp  Grid.h  Grid1D.h  Grid1D.hpp  Grid2D.h  Grid2D.hpp  GridParams.h  Interface.h  L0Learn.hpp  MakeCD.h  MakeCD.hpp  Model.h  Normalize.h  Params.h  Rface.h  Test_Interface.h  utils.h
tests/: testthat.R
tests/benchmarks/: benchmark.R
tests/box_test/: classification.ipynb  gurobi.ipynb  gurobi2.ipynb  regression.ipynb
tests/testthat/: test-L0Learn_accuracy.R  test-L0Learn_gen.R  test_L0Learn.R  test_L0Learn_bounds.R  test_L0Learn_highcorr.R  test_L0Learn_intercept.R  test_L0Learn_usergrids.R  test_L0Learn_utils.R  test_L0Learn_versions.R  utils.R  (+1 more)
vignettes/: L0Learn-sparse-vignette.Rmd  L0Learn-sparse-vignette.html  L0Learn-vignette.R  L0Learn-vignette.Rmd  L0Learn-vignette.html
(+1 files in other folders)
