[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "Cython",
    "numpy",
    "h5py",
]
build-backend = "setuptools.build_meta"

[tool.coverage.run]
plugins = ["Cython.Coverage"]
source=[
    "l0learn/cyarma.pyx",
    "l0learn/cyarma.pxd",
    "l0learn/init.py",
    "l0learn/interface.pxd",
    "l0learn/interface.pyx",
    "l0learn/models.py",
]
