[metadata]
description = L0Learn is a highly efficient framework for solving L0-regularized learning problems.
author = Hussein Hazimeh
author_email = hazimeh@google.com
maintainer = Tim Nonet
maintainer_email = tim.nonet@gmail.com
license = MIT
url = https://github.com/hazimehh/L0Learn
project_urls =
    Source  = https://github.com/hazimehh/L0Learn
    Tracker = https://github.com/hazimehh/L0Learn/issues
classifiers=
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Software Development :: Libraries :: Python Modules
    Development Status :: 4 - Beta
    Programming Language :: C++
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: POSIX
    Operating System :: MacOS
    License :: OSI Approved :: MIT License

[options]
zip_safe = False
python_requires = >=3.7
install_requires =
    numpy>=1.19.0
    scipy>=1.0.0
    pandas>=1.0.0
    matplotlib

[options.extras_require]
test =
    hypothesis
all =
    %(test)s
[tool:pytest]
addopts = -rsxX -v
testpaths = tests